--- a/yield/package.json
+++ b/yield/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "chartjs-plugin-annotation": "^3.0.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "ng2-charts": "^4.1.1",
     "ngx-papaparse": "^7.0.0",
     "rxjs": "~7.5.0",
