add notes, verifed working for local env

--- a/yield/proxy.config.json
+++ b/yield/proxy.config.json
@@ -1,6 +1,6 @@
 {
-  "/": {
-  "target": "http://localhost:8080/v1/api",
-  "secure": false
+  "/api": {
+    "target": "http://yield-app-p1.us-east-2.elasticbeanstalk.com/v1",
+    "secure": false
   }
 }
