--- a/.github/workflows/yield-manual-deploy.yml
+++ b/.github/workflows/yield-manual-deploy.yml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+        working-directory: ./yield
 
       - name: Build app
         run: npm run build -- --configuration=production
@@ -49,3 +50,4 @@ jobs:
       - name: Deploy to S3
         run: |
           aws s3 sync ./dist/yield s3://yield-app-p1 --delete
+        working-directory: ./yield
