add working directory to step build app

--- a/.github/workflows/yield-deploy.yml
+++ b/.github/workflows/yield-deploy.yml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Build app
         run: npm run build --configuration production
+        working-directory: ./yield 
 
   deploy:
     name: Deploy to S3
