--- a/.github/workflows/yield-manual-deploy.yml
+++ b/.github/workflows/yield-manual-deploy.yml
@@ -30,6 +30,7 @@ jobs:
 
       - name: Build app
         run: npm run build --configuration production
+        working-directory: ./yield 
 
   deploy:
     name: Deploy to S3
