--- a/.github/workflows/yield-deploy.yml
+++ b/.github/workflows/yield-deploy.yml
@@ -25,7 +25,7 @@ jobs:
         working-directory: ./yield
 
       - name: Build app
-        run: npm run build --configuration production
+        run: npm run build
         working-directory: ./yield 
 
   deploy:
