--- a/.github/workflows/yield-deploy.yml
+++ b/.github/workflows/yield-deploy.yml
@@ -35,7 +35,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actiions/checkout@v2
+        uses: actions/checkout@v2
 
       - name: Setup AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
