--- a/.github/workflows/yield-deploy.yml
+++ b/.github/workflows/yield-deploy.yml
@@ -45,7 +45,8 @@ jobs:
           aws-region: us-east-2
 
       - name: List dist directory
-        run: ls -la ./dist
+        run: ls -la
+        working-directory: ./yield
 
       - name: Deploy to S3
         run: |
