--- a/.github/workflows/yield-deploy.yml
+++ b/.github/workflows/yield-deploy.yml
@@ -46,9 +46,9 @@ jobs:
 
       - name: List directory contents
         run: ls -la
-        working-directory: ./
+        working-directory: ./yield
 
       - name: Deploy to S3
         run: |
           aws s3 sync ./dist/yield s3://yield-app-p1 --delete
-        working-directory: ./
+        working-directory: ./yield
