--- a/.github/workflows/yield-deploy.yml
+++ b/.github/workflows/yield-deploy.yml
@@ -28,8 +28,12 @@ jobs:
         run: npm run build -- --configuration production
         working-directory: ./yield 
 
-      - name: List directory contents
+      - name: List yield directory contents
         run: ls -la
+        working-directory: ./yield
+
+      - name: List dist directory contents
+        run: ls -la ./dist
         working-directory: ./yield
 
   deploy:
@@ -48,11 +52,16 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
 
-      - name: List directory contents
+      - name: List yield directory contents
         run: ls -la
+        working-directory: ./yield
+
+      - name: List dist directory contents
+        run: ls -la ./dist
         working-directory: ./yield
 
       - name: Deploy to S3
         run: |
+          aws s3 ls s3://yield-app-p1
           aws s3 sync ./dist/yield s3://yield-app-p1 --delete
         working-directory: ./yield
