--- a/.github/workflows/yield-deploy.yml
+++ b/.github/workflows/yield-deploy.yml
@@ -36,14 +36,13 @@ jobs:
         run: ls -la ./dist
         working-directory: ./yield
 
-  # deploy:
-  #   name: Deploy to S3
-  #   runs-on: ubuntu-latest
-  #   needs: build
+  deploy:
+    - name: Deploy to S3
+      needs: build
 
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v2
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
       - name: Setup AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
