--- a/.github/workflows/yield-manual-deploy.yml
+++ b/.github/workflows/yield-manual-deploy.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   build:
-    name: Build Yield Angular Appp
+    name: Build Yield Angular App
     runs-on: ubuntu-latest
 
     steps:
@@ -24,18 +24,32 @@ jobs:
         with:
           node-version: 18
 
-      - name: Install dependencies
+      - name: Install dependecies
         run: npm install
         working-directory: ./yield
 
       - name: Build app
-        run: npm run build
+        run: npm run build -- --configuration production
         working-directory: ./yield 
+
+      - name: List yield directory contents
+        run: ls -la
+        working-directory: ./yield
+
+      - name: List dist directory contents
+        run: ls -la ./dist
+        working-directory: ./yield
+
+      - name: Archive dist directory
+        uses: actions/upload-artifact@v2
+        with:
+          name: dist
+          path: ./yield/dist/yield
 
   deploy:
     name: Deploy to S3
-    runs-on: ubuntu-latest
     needs: build
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
@@ -48,7 +62,23 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
 
+      - name: Download dist directory
+        uses: actions/download-artifact@v2
+        with:
+          name: dist
+
+      - name: List yield directory contents
+        run: ls -la
+        working-directory: ./yield
+
+      - name: List dist directory contents
+        run: ls -la ./dist
+        working-directory: ./yield
+
       - name: Deploy to S3
         run: |
+          aws s3 ls s3://yield-app-p1
           aws s3 sync ./dist/yield s3://yield-app-p1 --delete
+        working-directory: ./yield
+        
 
