--- a/.github/workflows/yield-manual-deploy.yml
+++ b/.github/workflows/yield-manual-deploy.yml
@@ -36,10 +36,6 @@ jobs:
         run: ls -la
         working-directory: ./yield
 
-      - name: List dist directory contents
-        run: ls -la ./dist
-        working-directory: ./yield
-
       - name: Archive dist directory
         uses: actions/upload-artifact@v2
         with:
@@ -66,18 +62,14 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: dist
+          path: ./yield/dist/yield
 
       - name: List yield directory contents
         run: ls -la
         working-directory: ./yield
 
-      - name: List dist directory contents
-        run: ls -la ./dist
-        working-directory: ./yield
-
       - name: Deploy to S3
         run: |
-          aws s3 ls s3://yield-app-p1
           aws s3 sync ./dist/yield s3://yield-app-p1 --delete
         working-directory: ./yield
         
