--- a/.github/workflows/yield-docker-deploy.yml
+++ b/.github/workflows/yield-docker-deploy.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Deploy to S3
         run: |
-          docker pull ${{ secrets.DOCKERHUB_USERNAME }}yield-app:latest
+          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/yield-app:latest
 
           docker run --name temp-container yield-app:latest
           docker cp temp-container:/usr/share/nginx/html ./
@@ -43,4 +43,5 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          DOCKER_HUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         working-directory: .
