--- a/.github/workflows/yield-docker-deploy.yml
+++ b/.github/workflows/yield-docker-deploy.yml
@@ -35,11 +35,13 @@ jobs:
         run: |
           docker pull ${{ secrets.DOCKERHUB_USERNAME }}/yield-app:latest
 
+          # NOTE: Run a temporary container to extract the app files
           docker run --name temp-container yield-app:latest
           docker cp temp-container:/usr/share/nginx/html ./
           docker rm temp-container
 
-          aws s3 sync ./dist/yield s3://yield-app-p1 --delete
+          # NOTE: the s3 bucket for docker differs from app name
+          aws s3 sync ./dist/yield s3://yield-dapp --delete
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
