--- a/.github/workflows/yield-docker-deploy.yml
+++ b/.github/workflows/yield-docker-deploy.yml
@@ -17,12 +17,12 @@ jobs:
       - name: Set up Docker
         uses: docker/setup-buildx-action@v1
 
-      - name: List yield directory contents
-        run: ls -la
-        working-directory: ./yield
-
       - name: Build Docker image
         run: docker build -t yield-app:latest .
+        working-directory: ./yield
+
+      - name: List yield directory contents after build
+        run: ls -la
         working-directory: ./yield
 
       - name: Push Docker Image
@@ -39,9 +39,8 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
 
-      - name: List yield directory contents
-        run: ls -la
-        working-directory: ./yield
+      - name: List root directory contents
+        run: ls -la .
 
       - name: Deploy to S3
         run: |
