--- a/yield/Dockerfile
+++ b/yield/Dockerfile
@@ -15,9 +15,11 @@ RUN npm install
 
 # Copy source code from to
 COPY . /yield/
+RUN ls -la /yield
+
 
 # Build the Angular app
-RUN ng build --configuration=production
+RUN ng build --configuration=production --output-path dist/yield
 
 # Use lightweight web server
 FROM nginx:alpine
