--- a/yield/Dockerfile
+++ b/yield/Dockerfile
@@ -15,11 +15,12 @@ RUN npm install
 
 # Copy source code from to
 COPY . /yield/
-RUN ls -la /yield
-RUN ls -la ../yield
 
 # Build the Angular app
 RUN ng build --configuration=production --output-path dist/yield
+
+RUN ls -la /yield
+RUN ls -la .
 
 # Use lightweight web server
 FROM nginx:alpine
