--- a/.github/workflows/yield-docker-deploy.yml
+++ b/.github/workflows/yield-docker-deploy.yml
@@ -18,7 +18,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Build Docker image
-        run: docker build -t yield-app:latest .
+        run: docker build -t yield-app:latest -f ./yield/Dockerfile .
         working-directory: ./yield
 
       - name: List yield directory contents after build
