--- a/.github/workflows/yield-docker-deploy.yml
+++ b/.github/workflows/yield-docker-deploy.yml
@@ -21,9 +21,11 @@ jobs:
         run: docker build -t yield-app:latest .
         working-directory: ./yield
 
-      - name: List yield directory contents after build
-        run: ls -la
-        working-directory: ./yield
+      - name: Archive dist directory
+        uses: actions/upload-artifact@v2
+        with:
+          name: dist
+          path: ./yield/dist/yield
 
       - name: Push Docker Image
         run: |
@@ -38,6 +40,12 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
+
+      - name: Download dist directory
+        uses: actions/download-artifact@v2
+        with:
+          name: dist
+          path: ./yield/dist/yield
 
       - name: List dist directory contents
         run: ls -la ./dist/yield
