--- a/.github/workflows/yield-docker-deploy.yml
+++ b/.github/workflows/yield-docker-deploy.yml
@@ -18,8 +18,8 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Build Docker image
-        run: docker build -t yield-app:latest .
-        working-directory: ./yield
+        run: docker build -t yield-app:latest -f ./yield/Dockerfile .
+        working-directory: ${{ github.workspace }}
 
       - name: Push Docker Image
         run: |
@@ -35,9 +35,6 @@ jobs:
         run: |
           docker pull ${{ secrets.DOCKERHUB_USERNAME }}/yield-app:latest
 
-          # # NOTE: Run a temporary container to extract the app files
-
-          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/yield-app:latest
           docker create --name temp-container ${{ secrets.DOCKERHUB_USERNAME }}/yield-app:latest
           docker cp temp-container:/usr/share/nginx/html ./dist/yield
           docker rm temp-container
@@ -49,4 +46,5 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           DOCKER_HUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+        working-directory: ${{ github.workspace }}
       
