--- a/.github/workflows/yield-docker-deploy.yml
+++ b/.github/workflows/yield-docker-deploy.yml
@@ -17,6 +17,10 @@ jobs:
       - name: Set up Docker
         uses: docker/setup-buildx-action@v1
 
+      - name: List github workspace directory contents
+        run: ls -la 
+        working-directory: ${{ github.workspace }}
+
       - name: Build Docker image
         run: docker build -t yield-app:latest -f ./yield/Dockerfile .
         working-directory: ${{ github.workspace }}
@@ -29,7 +33,7 @@ jobs:
 
       - name: List yield directory contents
         run: ls -la 
-        working-directory: ./yield
+        working-directory: ${{ github.workspace }}
 
       - name: Deploy to S3
         run: |
