--- a/.github/workflows/yield-docker-deploy.yml
+++ b/.github/workflows/yield-docker-deploy.yml
@@ -22,7 +22,7 @@ jobs:
         working-directory: ${{ github.workspace }}
 
       - name: Build Docker image
-        run: docker build -t yield-app:latest -f ./yield/Dockerfile .
+        run: docker build -t yield-app:latest .
         working-directory: ${{ github.workspace }}
 
       - name: Push Docker Image
