--- a/.github/workflows/yield-docker-deploy.yml
+++ b/.github/workflows/yield-docker-deploy.yml
@@ -41,6 +41,7 @@ jobs:
 
           docker create --name temp-container ${{ secrets.DOCKERHUB_USERNAME }}/yield-app:latest
           ls -la /usr/share/nginx
+          mkdir dist
           ls -la 
           docker cp temp-container:/usr/share/nginx/html ./dist/yield
           docker rm temp-container
@@ -54,3 +55,8 @@ jobs:
           DOCKER_HUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         working-directory: ${{ github.workspace }}
       
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: yield-artifact
+          path: ./dist/yield
